# nsv-cli

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: main.rs
tests/: test_lift_unlift.sh  test_sanitize.sh  test_stats.sh  test_transpose.sh  test_validate.sh
tests/fixtures/: bom_crlf_unknown_escape.nsv  bom_unknown_escape.nsv  crlf_unknown_escape.nsv  crlf_unknown_escape_line2.nsv  dangling_backslash.nsv  mixed.nsv  multibyte_unknown_escape.nsv  multiline_cell.nsv  no_newlines.nsv  not_a_table.nsv  not_a_table_with_warning.nsv  ragged.nsv  table_3x4.nsv  unknown_escape.nsv  unknown_escape_line2.nsv
